--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <input type="radio" id="sugar-cone" value="sugar-cone" name="method">Sugar Cone</input>
         <input type="radio" id="cup" value="cup" name="method">Cup</input>
         <br>
-        <label for="Toppings"class="space">Choose your toppings:</label>
+        <label for="Toppings">Choose your toppings:</label>
 
         <input type="checkbox" id="sprinkles" value="sprinkles" name="toppings[]">Sprinkles
         <input type="checkbox" id="nuts" value="nuts" name="toppings[]">Nuts
