--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 
         <br>
         <!-- Comment field -->
-         <label for="comment"> Additional Comments:</label>
+         <label for="comment">Additional Comments:</label>
          <textarea id="comment" name="comment" row="5"></textarea>
 
-        <!-- Submit Button -->
+        <!-- Submit B.  utton -->
         <button type="submit" id="order-button">Submit Order</button>
         
     </fieldset>
